fix: media query for button on mobile
Might work

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -18,3 +18,8 @@ $material-dark: (
 .img {
   border-radius: 10px;
 }
+
+@media only screen and (max-width: 600px) {
+.action-button {
+  float: left !important;
+}
